force-app/main/default/objects/clofor_com_cfs__ReceivablesAmount__c/fields/clofor_com_cfs__ReceivedDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ReceivedDate__c</fullName>
    <label>Received Date</label>
    <type>Date</type>
</CustomField>