force-app/main/default/objects/clofor_com_cfs__ReceivablesAmount__c/fields/clofor_com_cfs__Receivedfrom__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Receivedfrom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Received from</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Receivables Amount</relationshipLabel>
    <relationshipName>Receivables_Amount</relationshipName>
    <type>Lookup</type>
</CustomField>