force-app/main/default/objects/clofor_com_cfs__ReceivablesAmount__c/fields/clofor_com_cfs__ReceivedNote__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ReceivedNote__c</fullName>
    <label>Received Note</label>
    <type>TextArea</type>
</CustomField>